--- a/test-network/compose/docker/docker-compose-test-net.yaml
+++ b/test-network/compose/docker/docker-compose-test-net.yaml
@@ -1,13 +1,11 @@
 # Copyright IBM Corp. All Rights Reserved.
 #
 # SPDX-License-Identifier: Apache-2.0
-#
 
-version: '3.7'
 services:
   peer0.org1.example.com:
     container_name: peer0.org1.example.com
-    image: hyperledger/fabric-peer:latest
+    image: hyperledger/fabric-peer:2.4.7
     labels:
       service: hyperledger-fabric
     environment:
@@ -20,7 +18,7 @@ services:
 
   peer0.org2.example.com:
     container_name: peer0.org2.example.com
-    image: hyperledger/fabric-peer:latest
+    image: hyperledger/fabric-peer:2.4.7
     labels:
       service: hyperledger-fabric
     environment:
@@ -33,6 +31,6 @@ services:
   
   cli:
     container_name: cli
-    image: hyperledger/fabric-tools:latest
+    image: hyperledger/fabric-tools:2.4.7
     volumes:
       - ./docker/peercfg:/etc/hyperledger/peercfg
